--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <h1>Is your birthdate lucky?</h1>
     <div class="container">
-      <label for="birthdate-label"></label>
+      <label for="birthdate-label">Select Birth Date</label>
       <input type="date" name="birth-date" id="birth-date" />
-      <label for="luckynumber-label"></label>
+      <label for="luckynumber-label">Enter lucky number</label>
       <input type="text" id="lucky-number" />
       <button id="check-lucky">Check Date</button>
       <div id="output-message"></div>
